multimedia/shared/nmf/tools/src/tools/idl/parser/IDLParser.java
/*
 * Copyright (C) ST-Ericsson SA 2010. All rights reserved.
 *
 * This code is part of the NMF Toolset.
 *
 * The NMF Toolset is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 2.1 of the License, or (at your option) any later version.
 *
 * The NMF Toolset is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with the NMF Toolset. If not, see <http://www.gnu.org/licenses/>.
 *
 */
/* Generated By:JavaCC: Do not edit this line. IDLParser.java */
package tools.idl.parser;

import tools.common.compilerexception;
import tools.common.util;
import tools.idl.ast.*;
import java.io.File;

public class IDLParser implements IDLParserConstants {
        public File file;

/*****************************************************
 IDL Grammars
 *****************************************************/
  final public Interface InterfaceDeclaration(String _name) throws ParseException, compilerexception {
  Interface itf = new Interface(file, _name);
  Method md;
  definition decl;
  Token token;
  String foundname;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INCLUDE:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(INCLUDE);
      token = jj_consume_token(PATHABS);
                               itf.includes.add(new include(file, token, token.image.substring(1, token.image.length()-1)));
    }
    label_2:
    while (true) {
      if (jj_2_1(3)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_2(3)) {
        decl = StructDeclaration();
        jj_consume_token(81);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STRUCT:
          decl = StructPredeclaredDeclaration();
          jj_consume_token(81);
          break;
        case TYPEDEF:
          decl = TypedefDeclaration();
          jj_consume_token(81);
          break;
        case ENUM:
          decl = EnumDeclaration();
          jj_consume_token(81);
          break;
        case DEFINE:
          decl = DefineDeclaration();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
                  itf.addDefinition(decl);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTERFACE:
      jj_consume_token(INTERFACE);
      foundname = StringName();
                                         itf.setName(foundname);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UNMANAGED:
        jj_consume_token(UNMANAGED);
                                itf.unmanaged = true;
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      jj_consume_token(82);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRUCT:
      case CONST:
      case LONG:
      case ENUM:
      case VOID:
      case IMPORT_SHARED:
      case TUINT64:
      case TUINT56:
      case TUINT48:
      case TUINT40:
      case TUINT32:
      case TADDRESS:
      case TSHAREDREG:
      case TSHAREDFIELD:
      case TUINT24:
      case TUWORD:
      case TUINT16:
      case TUINT8:
      case TSINT64:
      case TSINT56:
      case TSINT48:
      case TSINT40:
      case TSINT32:
      case TSINT24:
      case TSWORD:
      case TSINT16:
      case TSINT8:
      case CHAR:
      case TBOOL:
      case INT:
      case SHORT:
      case DOUBLE:
      case FLOAT:
      case SIGNED:
      case UNSIGNED:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      md = MethodDeclaration();
                                           itf.methods.add(md);
      jj_consume_token(81);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 83:
      jj_consume_token(83);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(0);
                {if (true) return itf;}
    throw new Error("Missing return statement in function");
  }

  final public definedtype idtDeclaration() throws ParseException, compilerexception {
        definedtype df = new definedtype(file);
        definition decl;
        Token name;
    jj_consume_token(IFNDEF);
    name = jj_consume_token(IDENTIFIER);
                  df.GuardedIndentifier = name.image;
    jj_consume_token(DEFINE);
    jj_consume_token(IDENTIFIER);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INCLUDE:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
      jj_consume_token(INCLUDE);
      token = jj_consume_token(PATHABS);
                          df.includes.add(new include(file, token, token.image.substring(1, token.image.length()-1)));
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TYPEDEF:
      case STRUCT:
      case ENUM:
      case DEFINE:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_5;
      }
      if (jj_2_3(3)) {
        decl = StructDeclaration();
        jj_consume_token(81);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STRUCT:
          decl = StructPredeclaredDeclaration();
          jj_consume_token(81);
          break;
        case TYPEDEF:
          decl = TypedefDeclaration();
          jj_consume_token(81);
          break;
        case ENUM:
          decl = EnumDeclaration();
          jj_consume_token(81);
          break;
        case DEFINE:
          decl = DefineDeclaration();
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
                  df.addDefinition(decl);
    }
    jj_consume_token(ENDIF);
    jj_consume_token(0);
                {if (true) return df;}
    throw new Error("Missing return statement in function");
  }

/*
 * Method declaration grammars
 */
  final public Method MethodDeclaration() throws ParseException, compilerexception {
  Token t, qual = null;
  Type type;
  Method md;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IMPORT_SHARED:
      qual = jj_consume_token(IMPORT_SHARED);
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    type = ResultType();
    t = jj_consume_token(IDENTIFIER);
                                     md = new Method(file, t, t.image, type, qual == null ? null : qual.image);
    FormalParameters(md);
    {if (true) return md;}
    throw new Error("Missing return statement in function");
  }

  final public void FormalParameters(TypeMethod md) throws ParseException, compilerexception {
  Parameter fp;
  Token t;
    jj_consume_token(84);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRUCT:
    case CONST:
    case LONG:
    case ENUM:
    case VOID:
    case TUINT64:
    case TUINT56:
    case TUINT48:
    case TUINT40:
    case TUINT32:
    case TADDRESS:
    case TSHAREDREG:
    case TSHAREDFIELD:
    case TUINT24:
    case TUWORD:
    case TUINT16:
    case TUINT8:
    case TSINT64:
    case TSINT56:
    case TSINT48:
    case TSINT40:
    case TSINT32:
    case TSINT24:
    case TSWORD:
    case TSINT16:
    case TSINT8:
    case CHAR:
    case TBOOL:
    case INT:
    case SHORT:
    case DOUBLE:
    case FLOAT:
    case SIGNED:
    case UNSIGNED:
    case IDENTIFIER:
      if (jj_2_5(2)) {
        fp = FormalParameter();
                               md.addParameter(fp);
        label_6:
        while (true) {
          if (jj_2_4(2)) {
            ;
          } else {
            break label_6;
          }
          jj_consume_token(85);
          fp = FormalParameter();
                                                  md.addParameter(fp);
        }
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VOID:
          jj_consume_token(VOID);
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(86);
  }

  final public Parameter FormalParameter() throws ParseException, compilerexception {
  Token t, tc = null;
  Type type;
  TypeMethod md;
  Token nb;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONST:
      tc = jj_consume_token(CONST);
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    type = ParameterType();
            if(tc != null) type = new typeconst(file, tc, type);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 87:
      t = jj_consume_token(87);
              type = new typereference(file, t, type);
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      t = jj_consume_token(IDENTIFIER);
      break;
    case 84:
      jj_consume_token(84);
      jj_consume_token(88);
      t = jj_consume_token(IDENTIFIER);
      jj_consume_token(86);
                   type = md = new TypeMethod(file, t, type);
      FormalParameters(md);
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    type = ArrayDeclaration(type);
    {if (true) return new Parameter(t, t.image, type);}
    throw new Error("Missing return statement in function");
  }

  final public Type ResultType() throws ParseException, compilerexception {
  Type type;
  Token t, memqualifier=null, tc = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONST:
      tc = jj_consume_token(CONST);
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    if (jj_2_6(2)) {
      type = PrimitiveType();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LONG:
      case CHAR:
      case INT:
      case SHORT:
      case DOUBLE:
      case FLOAT:
      case SIGNED:
      case UNSIGNED:
        type = UnmanagedPrimitiveType();
        break;
      default:
        jj_la1[16] = jj_gen;
        if (jj_2_7(3)) {
          type = ComplexType();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case VOID:
            t = jj_consume_token(VOID);
                   type = new TypeVoid(file, t);
            break;
          default:
            jj_la1[17] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
    label_7:
    while (true) {
      if (jj_2_8(2)) {
        ;
      } else {
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        memqualifier = jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      t = jj_consume_token(88);
                  type = new TypePointer(file, t, type, (memqualifier == null) ? null:memqualifier.image); memqualifier = null;
    }
                if(tc != null) type = new typeconst(file, tc, type);
                {if (true) return type;}
    throw new Error("Missing return statement in function");
  }

  final public Type ParameterType() throws ParseException, compilerexception {
  Type type;
  Token t, memqualifier=null;
    if (jj_2_9(2)) {
      type = PrimitiveType();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LONG:
      case CHAR:
      case INT:
      case SHORT:
      case DOUBLE:
      case FLOAT:
      case SIGNED:
      case UNSIGNED:
        type = UnmanagedPrimitiveType();
        break;
      case STRUCT:
      case ENUM:
      case VOID:
      case IDENTIFIER:
        type = ComplexType();
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    label_8:
    while (true) {
      if (jj_2_10(2)) {
        ;
      } else {
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        memqualifier = jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      t = jj_consume_token(88);
          type = new TypePointer(file, t, type, (memqualifier == null) ? null:memqualifier.image); memqualifier = null;
    }
    {if (true) return type;}
    throw new Error("Missing return statement in function");
  }

/*
 * Type grammars
 */
  final public String StringName() throws ParseException {
        String name;
        Token fn, n;
    fn = jj_consume_token(IDENTIFIER);
                      name = fn.image;
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 89:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_9;
      }
      jj_consume_token(89);
      n = jj_consume_token(IDENTIFIER);
                            name = name + "." + n.image;
    }
    {if (true) return name;}
    throw new Error("Missing return statement in function");
  }

  final public Type TypeName() throws ParseException {
        String name;
        Token fn, n;
    fn = jj_consume_token(IDENTIFIER);
                      name = fn.image;
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 89:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_10;
      }
      jj_consume_token(89);
      n = jj_consume_token(IDENTIFIER);
                            name = name + "." + n.image;
    }
    {if (true) return new TypeTypedef(file, fn, name);}
    throw new Error("Missing return statement in function");
  }

  final public Type ComplexType() throws ParseException, compilerexception {
        Token t, name, memqualifier=null;
        Type type;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRUCT:
      t = jj_consume_token(STRUCT);
      name = jj_consume_token(IDENTIFIER);
                                        {if (true) return new typestructure(file, t, name.image);}
      break;
    case ENUM:
      t = jj_consume_token(ENUM);
      name = jj_consume_token(IDENTIFIER);
                                     {if (true) return new typeenum(file, t, name.image);}
      break;
    case IDENTIFIER:
      type = TypeName();
                          {if (true) return type;}
      break;
    case VOID:
      t = jj_consume_token(VOID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        memqualifier = jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[23] = jj_gen;
        ;
      }
      jj_consume_token(88);
                                                   {if (true) return new TypePointer(file, t, new TypeVoid(file, t), (memqualifier == null) ? null:memqualifier.image);}
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public TypePrimitive PrimitiveType() throws ParseException, compilerexception {
        Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TUINT64:
      t = jj_consume_token(TUINT64);
      break;
    case TUINT56:
      t = jj_consume_token(TUINT56);
      break;
    case TUINT48:
      t = jj_consume_token(TUINT48);
      break;
    case TUINT40:
      t = jj_consume_token(TUINT40);
      break;
    case TUINT32:
      t = jj_consume_token(TUINT32);
      break;
    case TADDRESS:
      t = jj_consume_token(TADDRESS);
      break;
    case TSHAREDREG:
      t = jj_consume_token(TSHAREDREG);
      break;
    case TSHAREDFIELD:
      t = jj_consume_token(TSHAREDFIELD);
      break;
    case TUINT24:
      t = jj_consume_token(TUINT24);
      break;
    case TUWORD:
      t = jj_consume_token(TUWORD);
      break;
    case TUINT16:
      t = jj_consume_token(TUINT16);
      break;
    case TUINT8:
      t = jj_consume_token(TUINT8);
      break;
    case TSINT64:
      t = jj_consume_token(TSINT64);
      break;
    case TSINT56:
      t = jj_consume_token(TSINT56);
      break;
    case TSINT48:
      t = jj_consume_token(TSINT48);
      break;
    case TSINT40:
      t = jj_consume_token(TSINT40);
      break;
    case TSINT32:
      t = jj_consume_token(TSINT32);
      break;
    case TSINT24:
      t = jj_consume_token(TSINT24);
      break;
    case TSWORD:
      t = jj_consume_token(TSWORD);
      break;
    case TSINT16:
      t = jj_consume_token(TSINT16);
      break;
    case TSINT8:
      t = jj_consume_token(TSINT8);
      break;
    case CHAR:
      t = jj_consume_token(CHAR);
      break;
    case TBOOL:
      t = jj_consume_token(TBOOL);
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return new TypePrimitive(file, t, t.image);}
    throw new Error("Missing return statement in function");
  }
